[gd_scene load_steps=5 format=3 uid="uid://blatwwuhiiwy0"]

[ext_resource type="Script" path="res://Codigo/Jogador.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bdmagb0iob3x4" path="res://Componentes/spaceship.png" id="2"]
[ext_resource type="PackedScene" uid="uid://btachtyei0hwl" path="res://Armas/ArmaSniper.tscn" id="3"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(62, 27)

[node name="Jogador" type="Sprite2D"]
position = Vector2(690, 360)
texture = ExtResource("2")
script = ExtResource("1")

[node name="Area2D" type="Area2D" parent="." groups=["jogador"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 0)
shape = SubResource("1")

[node name="Arma" parent="." instance=ExtResource("3")]

[node name="TempoInvencibilidade" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="TempoInvencibilidade" to="." method="_on_TempoInvencibilidade_timeout"]
